plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '4.0.5'
    id("io.qameta.allure") version "3.0.2"
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'
description = 'study'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
    implementation 'net.datafaker:datafaker:2.5.4'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-restdocs'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // Jakarta Validation API (use the latest version, e.g., 3.0.x or 3.1.x)
    implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1' // Check for latest version if needed

    // Hibernate Validator (Reference Implementation) (use a compatible version, e.g., 8.0.x)
    implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
}

test {
    outputs.dir snippetsDir

    useJUnitPlatform {
        if (project.hasProperty('includeTags')) {
            includeTags project.property('includeTags').toString()
        }
        if (project.hasProperty('excludeTags')) {
            excludeTags project.property('excludeTags').toString()
        }
    }
}

tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    dependsOn test
}

allure {
    autoconfigure = true
    aspectjweaver = true
}
